Waypoint tool: add ‘move to active marker’

--- a/waypoint/autoexec.cfg
+++ b/waypoint/autoexec.cfg
@@ -50,7 +50,7 @@ bind "g"	"impulse 142"
 bind "h"	"impulse 137"
 bind "i"	"impulse 135"
 bind "j"	"impulse 138"
-bind "k"	""
+bind "k"	"impulse 159"
 bind "l"	"impulse 156"
 bind "n"	"impulse 133"
 bind "m"	"impulse 134"
