Waypoint tool: auto connect for teleport triggers.
So much easier and less error-prone than the manual method!

--- a/waypoint/autoexec.cfg
+++ b/waypoint/autoexec.cfg
@@ -44,13 +44,13 @@ bind "a"	"+moveleft"
 bind "b"	"impulse 153"
 bind "c"	"impulse 151"
 bind "d"	"+moveright"
-bind "e"	""
+bind "e"	"impulse 159"
 bind "f"	"impulse 144"
 bind "g"	"impulse 142"
 bind "h"	"impulse 137"
 bind "i"	"impulse 135"
 bind "j"	"impulse 138"
-bind "k"	"impulse 159"
+bind "k"	"impulse 160"
 bind "l"	"impulse 156"
 bind "n"	"impulse 133"
 bind "m"	"impulse 134"
