Make `toggle Frogbot` an official feature of waypoint tool.
- Be very careful with this, it _will_ crash when used inappropriately.
- Minor tweaks to `e1m2` and `hohoho2` WP.

--- a/waypoint/autoexec.cfg
+++ b/waypoint/autoexec.cfg
@@ -77,7 +77,7 @@ bind "CTRL"	"+movedown"
 bind "F1"	"impulse 143"
 bind "F2"	"impulse 130" // noclip toggle
 bind "F3"	"impulse 50" // damage flash toggle
-bind "F4"	""
+bind "F4"	"impulse 123" // become frogbot
 bind "F5"	"condump" // classic quicksave key
 bind "F6"	""
 bind "F11"	""
