Update docs, add some config bits
Configs and general usage info still need work.

Also add raw waypoints for `skull` from Trinca's archive. Looks mostly OK but needs some tweaks as usual.

And, some extra gibs.

--- a/configs/duel.cfg
+++ b/configs/duel.cfg
@@ -1,7 +1,6 @@
 // This for Zquake.exe (client + server) or fuhquake
 clear
-echo "The Duel cfg active!"
-serverinfo maxfps 77
+echo "Duel cfg active!"
 fraglimit 0
 timelimit 10
 teamplay 0
@@ -11,7 +10,7 @@ maxspectators 8
 hostname "Frogbot Clan Arena"
 // maps follow. This section describes what the maporder should be
 localinfo dm4 dm4
-localinfo d_skill 10		// default skill
+localinfo d_skill 5		// default skill
 localinfo k_timetop 30		// maximum time in minutes allocateable by a player for a game
 localinfo k_overtime 2		// Overtime mode (0 = off, 1 = time, 2 = SD)
 localinfo k_exttime 3		// Overtime length if overtime == 1
