--- a/configs/team.cfg
+++ b/configs/team.cfg
@@ -1,7 +1,6 @@
 // This for Zquake.exe (client + server) or fuhquake
 clear
-echo "The Team cfg active!"
-serverinfo maxfps 77
+echo "Team cfg active!"
 fraglimit 0
 timelimit 20
 teamplay 2
@@ -9,7 +8,7 @@ deathmatch 1
 maxclients 8
 maxspectators 8
 hostname "Frogbot Clan Arena"
-localinfo d_skill 10		// default skill
+localinfo d_skill 5		// default skill
 localinfo k_timetop 30		// maximum time in minutes allocateable by a player for a game
 localinfo k_overtime 1		// Overtime mode (0 = off, 1 = time, 2 = SD)
 localinfo k_exttime 5		// Overtime length if overtime == 1
