--- a/configs/arena.cfg
+++ b/configs/arena.cfg
@@ -1,9 +1,8 @@
 // This for Zquake.exe (client + server) or fuhquake
 clear
-echo "The Arena cfg active!"
-serverinfo maxfps 77
+echo "Arena cfg active!"
 fraglimit 0
-timelimit 10
+timelimit 3
 teamplay 0
 deathmatch 4
 maxclients 8
@@ -11,7 +10,7 @@ maxspectators 8
 hostname "Frogbot Clan Arena"
 // maps follow. This section describes what the maporder should be
 localinfo amphi2 amphi2
-localinfo d_skill 10		// default skill
+localinfo d_skill 5		// default skill
 localinfo k_timetop 30		// maximum time in minutes allocateable by a player for a game
 localinfo k_overtime 0		// Overtime mode (0 = off, 1 = time, 2 = SD)
 localinfo k_exttime 0		// Overtime length if overtime == 1
