--- a/configs/clarena.cfg
+++ b/configs/clarena.cfg
@@ -1,13 +1,12 @@
 // This for Zquake.exe (client + server) or fuhquake
 clear
-echo "The Clan arena cfg active!"
-serverinfo maxfps 77
+echo "Clan arena cfg active!"
 maxclients 8
 maxspectators 8
 hostname "Frogbot Clan Arena"
 // maps follow. This section describes what the maporder should be
 localinfo amphi2 amphi2
-localinfo d_skill 10		// default skill
+localinfo d_skill 5		// default skill
 localinfo k_overtime 0		// Overtime mode (0 = off, 1 = time, 2 = SD)
 localinfo k_exttime 0		// Overtime length if overtime == 1
 localinfo allow_startsound 0  // Start sound mode (0 = off, 1 = on)
