--- a/configs/ffa.cfg
+++ b/configs/ffa.cfg
@@ -1,15 +1,14 @@
 // This for Zquake.exe (client + server) or fuhquake
 clear
-echo "The Ffa cfg active!"
-serverinfo maxfps 77
+echo "FFA cfg active!"
 fraglimit 50
-timelimit 30
+timelimit 10
 teamplay 0
 deathmatch 3
 maxclients 8
 maxspectators 3
 hostname "Frogbot Clan Arena"
-localinfo d_skill 10		// default skill
+localinfo d_skill 5		// default skill
 localinfo k_overtime 0		// Overtime mode (0 = off, 1 = time, 2 = SD)
 localinfo k_exttime 0		// Overtime length if overtime == 1
 localinfo allow_startsound 0  // Start sound mode (0 = off, 1 = on)
