Waypoint tool enhancements
- find items with same goal, or next unused goal number
- add 1 extra next-nearest marker
  (Yes, `hohoho` has 4 stacked health boxes… twice.)
- add impulse 162 to toggle rocketjump when becoming frogbot inside
  waypoint tool

--- a/waypoint/autoexec.cfg
+++ b/waypoint/autoexec.cfg
@@ -25,9 +25,9 @@ bind "ENTER"	"impulse 150"
 bind "ESCAPE"	"togglemenu"
 bind "SPACE"	"+jump"
 bind "+"	""
-bind ","	"impulse 149"
+bind ","	"impulse 161"
 bind "-"	""
-bind "."	"impulse 148"
+bind "."	""
 bind "/"	"impulse 158" // various info
 bind "1"	"impulse 149"
 bind "2"	"impulse 148"
