--- a/waypoint/autoexec.cfg
+++ b/waypoint/autoexec.cfg
@@ -27,7 +27,7 @@ bind "SPACE"	"+jump"
 bind "+"	""
 bind ","	"impulse 161"
 bind "-"	""
-bind "."	""
+bind "."	"impulse 163"
 bind "/"	"impulse 158" // various info
 bind "1"	"impulse 149"
 bind "2"	"impulse 148"
