Update/simplify configs and instructions
- similar to nQuake Frogbot config
- but with some shorter countdowns
- remove redundant parts
- duel only has 2 players

--- a/frogbot.cfg
+++ b/frogbot.cfg
@@ -1,12 +1,12 @@
 // Based on nQuake Frogbot config
-// May need tweaking for your particular Quake flavor
+// May need tweaking for your particular Quake flavor and preferences
 
 setinfo drate 999999
 
 sv_gamedir "qw"
 sv_maxspeed 320
 fraglimit 50
-timelimit 10
+timelimit 6
 teamplay 0
 deathmatch 3
 maxclients 8
@@ -15,7 +15,7 @@ hostname "Frogbot Clan Arena"
 
 serverinfo maxfps 77
 
-// team names
+// Team names (not sure if these work in every engine)
 localinfo team0 zero
 localinfo team1 one
 localinfo team2 rock
@@ -31,29 +31,29 @@ localinfo team11 fore
 localinfo team12 edge
 localinfo team13 blue
 
-alias	"bot_1on1"		"exec configs/duel.cfg"
-alias	"bot_2on2"		"exec configs/2on2.cfg;team blue;color 13"
-alias	"bot_4on4"		"exec configs/team.cfg;team blue;color 13"
-alias	"bot_arena"		"exec configs/arena.cfg"
+alias	"bot_1on1"	"exec configs/duel.cfg"
+alias	"bot_2on2"	"exec configs/2on2.cfg;team blue;color 13"
+alias	"bot_4on4"	"exec configs/team.cfg;team blue;color 13"
+alias	"bot_arena"	"exec configs/arena.cfg"
 alias	"bot_carena"	"exec configs/clarena.cfg"
-alias	"bot_ffa"		"exec configs/ffa.cfg"
+alias	"bot_ffa"	"exec configs/ffa.cfg"
 
 // ffa config
 
-localinfo d_skill			5	// bot skill. 5 is OK for casual players, 10 or more for 'pros'
-localinfo k_timetop		30		// maximum time in minutes allocateable by a player for a game
-localinfo k_overtime		0		// overtime mode (0 = off, 1 = time, 2 = SD)
-localinfo k_exttime		0		// overtime length if overtime == 1
-localinfo allow_startsound	0		// start sound mode (0 = off, 1 = on)
-localinfo ffa_mapqueue		1		// ffa queue in random order (0 = off, 1 = on)
-localinfo k_count			10		// number of seconds for the countdown to last
-localinfo autoreport		1		// auto team report for human (0 = off, 1 = on)
-localinfo k_spectalk		1		// spectators can talk to players during game
-localinfo add_q_aerowalk	1		// quad in map aerowalk
-localinfo k_kfp			1		// "kill" flood protection
-localinfo proxy			0		// qizmo or mqwcl (0 = off, 1 = on)
-localinfo k_motd1			"Free For All server"
-localinfo k_motd2			"Type /addbot to add a bot"
+localinfo d_skill		5	// bot skill 0-20. 5 is OK for casual players, 10 or more for 'pros'
+localinfo k_timetop		30	// maximum time in minutes allocateable by a player for a game
+localinfo k_overtime		0	// overtime mode (0 = off, 1 = time, 2 = SD)
+localinfo k_exttime		0	// overtime length if overtime == 1
+localinfo allow_startsound	0	// start sound mode (0 = off, 1 = on)
+localinfo ffa_mapqueue		0	// ffa queue in random order (0 = off, 1 = on)
+localinfo k_count		7	// number of seconds for the countdown to last
+localinfo autoreport		1	// auto team report for human (0 = off, 1 = on)
+localinfo k_spectalk		1	// spectators can talk to players during game
+localinfo add_q_aerowalk	1	// quad in map aerowalk
+localinfo k_kfp			1	// "kill" flood protection
+localinfo proxy			0	// qizmo or mqwcl (0 = off, 1 = on)
+localinfo k_motd1		"Free For All server"
+localinfo k_motd2		"Type /addbot to add a bot"
 
 // map order
 localinfo ztndm3 genocide
