--- a/configs/arena.cfg
+++ b/configs/arena.cfg
@@ -1,6 +1,3 @@
-// This for Zquake.exe (client + server) or fuhquake
-clear
-echo "Arena cfg active!"
 fraglimit 0
 timelimit 3
 teamplay 0
@@ -8,34 +5,30 @@ deathmatch 4
 maxclients 8
 maxspectators 8
 hostname "Frogbot Clan Arena"
-// maps follow. This section describes what the maporder should be
-localinfo amphi2 amphi2
-localinfo d_skill 5		// default skill
-localinfo k_timetop 30		// maximum time in minutes allocateable by a player for a game
-localinfo k_overtime 0		// Overtime mode (0 = off, 1 = time, 2 = SD)
-localinfo k_exttime 0		// Overtime length if overtime == 1
-localinfo allow_startsound 0  // Start sound mode (0 = off, 1 = on)
-localinfo k_count 10          // Number of seconds for the countdown to last
-localinfo k_spectalk 0		// spectators can talk to players during game
-localinfo add_q_aerowalk 1    // quad in map Aerowalk
-localinfo k_kfp 1		      // "kill" flood protection
-localinfo proxy 1             // qizmo or mqwcl (0 = off, 1 = on)
-localinfo k_motd1 "Arena server"
-//localinfo k_motd2 "Admin: "
+
+localinfo d_skill		5	// bot skill 0-20
+localinfo k_timetop		30	// maximum time in minutes allocateable by a player for a game
+localinfo k_overtime		0	// overtime mode (0 = off, 1 = time, 2 = SD)
+localinfo k_exttime		0	// overtime length if overtime == 1
+localinfo allow_startsound	0	// start sound mode (0 = off, 1 = on)
+localinfo k_count		10	// number of seconds for the countdown to last
+localinfo k_spectalk		0	// spectators can talk to players during game
+localinfo add_q_aerowalk	1	// quad in map aerowalk
+localinfo k_kfp			1	// "kill" flood protection
+localinfo proxy			0	// qizmo or mqwcl (0 = off, 1 = on)
+localinfo k_motd1		"Arena server"	// message of the day
+//localinfo k_motd2		"Admin: "
+
+// Game parameters
 samelevel 8393536
-// Teams names
-localinfo team0 zero
-localinfo team1 one
-localinfo team2 rock
-localinfo team3 cure
-localinfo team4 red
-localinfo team5 push
-localinfo team6 ram
-localinfo team7 star
-localinfo team8 none
-localinfo team9 mesh
-localinfo team10 jag
-localinfo team11 fore
-localinfo team12 edge
-localinfo team13 blue
-map amphi2
+sv_progsname "qwprogs"
+
+// map rotation order
+localinfo amphi endif
+localinfo endif amphi2
+localinfo amphi2 povdmm4
+localinfo povdmm4 amphi
+
+echo "Frogbot Arena cfg loaded"
+
+map amphi
