--- a/configs/clarena.cfg
+++ b/configs/clarena.cfg
@@ -1,32 +1,25 @@
-// This for Zquake.exe (client + server) or fuhquake
-clear
-echo "Clan arena cfg active!"
+fraglimit 0
+timelimit 20
+teamplay 3
+deathmatch 4
 maxclients 8
 maxspectators 8
 hostname "Frogbot Clan Arena"
-// maps follow. This section describes what the maporder should be
-localinfo amphi2 amphi2
-localinfo d_skill 5		// default skill
-localinfo k_overtime 0		// Overtime mode (0 = off, 1 = time, 2 = SD)
-localinfo k_exttime 0		// Overtime length if overtime == 1
-localinfo allow_startsound 0  // Start sound mode (0 = off, 1 = on)
-localinfo add_q_aerowalk 1    // quad in map Aerowalk
-localinfo k_kfp 1		      // "kill" flood protection
-localinfo proxy 1             // qizmo or mqwcl (0 = off, 1 = on)
+
+localinfo d_skill		5	// bot skill 0-20
+localinfo k_overtime		0	// overtime mode (0 = off, 1 = time, 2 = SD)
+localinfo k_exttime		0	// overtime length if overtime == 1
+localinfo allow_startsound	0	// start sound mode (0 = off, 1 = on)
+localinfo add_q_aerowalk	1	// quad in map aerowalk
+localinfo k_kfp			1	// "kill" flood protection
+localinfo proxy			0	// qizmo or mqwcl (0 = off, 1 = on)
+localinfo k_motd1		"Clan Arena server"	// message of the day
+//localinfo k_motd2		"Admin: "
+
+// Game parameters
 samelevel 9442048
-// Teams names
-localinfo team0 zero
-localinfo team1 one
-localinfo team2 rock
-localinfo team3 cure
-localinfo team4 red
-localinfo team5 push
-localinfo team6 ram
-localinfo team7 star
-localinfo team8 none
-localinfo team9 mesh
-localinfo team10 jag
-localinfo team11 fore
-localinfo team12 edge
-localinfo team13 blue
-map amphi2
+sv_progsname "qwprogs"
+
+echo "Frogbot Clan Arena cfg loaded"
+
+map ztndm3
