--- a/configs/duel.cfg
+++ b/configs/duel.cfg
@@ -1,41 +1,34 @@
-// This for Zquake.exe (client + server) or fuhquake
-clear
-echo "Duel cfg active!"
 fraglimit 0
-timelimit 10
+timelimit 6
 teamplay 0
 deathmatch 3
-maxclients 8
+maxclients 2
 maxspectators 8
 hostname "Frogbot Clan Arena"
-// maps follow. This section describes what the maporder should be
-localinfo dm4 dm4
-localinfo d_skill 5		// default skill
-localinfo k_timetop 30		// maximum time in minutes allocateable by a player for a game
-localinfo k_overtime 2		// Overtime mode (0 = off, 1 = time, 2 = SD)
-localinfo k_exttime 3		// Overtime length if overtime == 1
-localinfo allow_startsound 1  // Start sound mode (0 = off, 1 = on)
-localinfo k_count 10          // Number of seconds for the countdown to last
-localinfo k_spectalk 0		// spectators can talk to players during game
-localinfo add_q_aerowalk 1    // quad in map Aerowalk
-localinfo k_kfp 1		      // "kill" flood protection
-localinfo proxy 1             // qizmo or mqwcl (0 = off, 1 = on)
-localinfo k_motd1 "Duel server"
-//localinfo k_motd2 "Admin: "
+
+localinfo d_skill		5	// bot skill 0-20
+localinfo k_timetop		30	// maximum time in minutes allocateable by a player for a game
+localinfo k_overtime		1	// overtime mode (0 = off, 1 = time, 2 = SD)
+localinfo k_exttime		3	// overtime length if overtime == 1
+localinfo allow_startsound	1	// start sound mode (0 = off, 1 = on)
+localinfo k_count		7	// number of seconds for the countdown to last
+localinfo k_spectalk		0	// spectators can talk to players during game
+localinfo add_q_aerowalk	1	// quad in map aerowalk
+localinfo k_kfp			1	// "kill" flood protection
+localinfo proxy			0	// qizmo or mqwcl (0 = off, 1 = on)
+localinfo k_motd1		"Duel server"	// message of the day
+//localinfo k_motd2		"Admin: "
+
+// Game parameters
 samelevel 8393536
-// Teams names
-localinfo team0 zero
-localinfo team1 one
-localinfo team2 rock
-localinfo team3 cure
-localinfo team4 red
-localinfo team5 push
-localinfo team6 ram
-localinfo team7 star
-localinfo team8 none
-localinfo team9 mesh
-localinfo team10 jag
-localinfo team11 fore
-localinfo team12 edge
-localinfo team13 blue
-map dm4
+sv_progsname "qwprogs"
+
+// map rotation order
+localinfo aerowalk ztndm3
+localinfo ztndm3 skull
+localinfo skull aerowalk
+
+echo "Frogbot Duel cfg loaded"
+
+//map dm4
+map aerowalk
