--- a/configs/ffa.cfg
+++ b/configs/ffa.cfg
@@ -1,45 +1,47 @@
-// This for Zquake.exe (client + server) or fuhquake
-clear
-echo "FFA cfg active!"
 fraglimit 50
-timelimit 10
+timelimit 6
 teamplay 0
 deathmatch 3
 maxclients 8
-maxspectators 3
+maxspectators 8
 hostname "Frogbot Clan Arena"
-localinfo d_skill 5		// default skill
-localinfo k_overtime 0		// Overtime mode (0 = off, 1 = time, 2 = SD)
-localinfo k_exttime 0		// Overtime length if overtime == 1
-localinfo allow_startsound 0  // Start sound mode (0 = off, 1 = on)
-localinfo ffa_mapqueue 1      // Ffa queue in random order (0 = off, 1 = on)
-localinfo add_q_aerowalk 1    // quad in map Aerowalk
-localinfo k_kfp 1		      // "kill" flood protection
-localinfo proxy 1             // qizmo or mqwcl (0 = off, 1 = on)
-// maps follow. This section describes what the maporder should be
-localinfo dm4 ztndm3
-localinfo ztndm3 dm3
-localinfo dm3 frobodm2
-localinfo frobodm2 dm6
-localinfo dm6 spinev2
-localinfo spinev2 aerowalk
-localinfo aerowalk dm4
-localinfo k_motd1 "Free For All server"
-//localinfo k_motd2 "Admin:"
-samelevel 8393473
-// Teams names
-localinfo team0 zero
-localinfo team1 one
-localinfo team2 rock
-localinfo team3 cure
-localinfo team4 red
-localinfo team5 push
-localinfo team6 ram
-localinfo team7 star
-localinfo team8 none
-localinfo team9 mesh
-localinfo team10 jag
-localinfo team11 fore
-localinfo team12 edge
-localinfo team13 blue
-map dm4
+
+localinfo d_skill		5	// bot skill 0-20
+localinfo k_overtime		0	// overtime mode (0 = off, 1 = time, 2 = SD)
+localinfo k_exttime		0	// overtime length if overtime == 1
+localinfo allow_startsound	0	// start sound mode (0 = off, 1 = on)
+localinfo ffa_mapqueue		1	// ffa queue in random order (0 = off, 1 = on)
+localinfo add_q_aerowalk	1	// quad in map aerowalk
+localinfo k_kfp			1	// "kill" flood protection
+localinfo proxy			0	// qizmo or mqwcl (0 = off, 1 = on)
+localinfo k_motd1		"Free For All server"	// message of the day
+//localinfo k_motd2		"Admin: "
+
+// Game parameters
+samelevel 8393473 // ffa
+sv_progsname "qwprogs"
+
+// classic map rotation order
+//localinfo dm4 ztndm3
+//localinfo ztndm3 dm3
+//localinfo dm3 frobodm2
+//localinfo frobodm2 dm6
+//localinfo dm6 spinev2
+//localinfo spinev2 aerowalk
+//localinfo aerowalk dm4
+
+// map rotation order (from nQuake, no retail maps)
+localinfo ztndm3 genocide
+localinfo genocide ukpak2
+localinfo ukpak2 shine
+localinfo shine q3dm6qw
+localinfo q3dm6qw dm4ish
+localinfo dm4ish rwild
+localinfo rwild ultrav
+localinfo ultrav bsdm6
+localinfo bsdm6 schloss
+localinfo schloss del1
+localinfo del1 ztndm3
+
+//map dm4
+map ztndm3
