--- a/configs/team.cfg
+++ b/configs/team.cfg
@@ -1,6 +1,3 @@
-// This for Zquake.exe (client + server) or fuhquake
-clear
-echo "Team cfg active!"
 fraglimit 0
 timelimit 20
 teamplay 2
@@ -8,38 +5,27 @@ deathmatch 1
 maxclients 8
 maxspectators 8
 hostname "Frogbot Clan Arena"
-localinfo d_skill 5		// default skill
-localinfo k_timetop 30		// maximum time in minutes allocateable by a player for a game
-localinfo k_overtime 1		// Overtime mode (0 = off, 1 = time, 2 = SD)
-localinfo k_exttime 5		// Overtime length if overtime == 1
-localinfo allow_startsound 0  // Start sound mode (0 = off, 1 = on)
-localinfo k_count 15          // Number of seconds for the countdown to last
-localinfo k_spectalk 0		// spectators can talk to players during game
-localinfo autoreport 1        // Auto team report for humman (0 = off, 1 = on)
-localinfo add_q_aerowalk 1    // quad in map Aerowalk
-localinfo k_kfp 1		      // "kill" flood protection
-localinfo proxy 1             // qizmo or mqwcl (0 = off, 1 = on)
-localinfo k_motd1 "Team server"
-//localinfo k_motd2 "Admin: "
-color 4
-team red
-// maps follow. This section describes what the maporder should be
-localinfo frobodm2 frobodm2
-samelevel 8396609             // Autosteams on
-//samelevel 8394501             // Autosteams off
-// Teams names
-localinfo team0 zero
-localinfo team1 one
-localinfo team2 rock
-localinfo team3 cure
-localinfo team4 red
-localinfo team5 push
-localinfo team6 ram
-localinfo team7 star
-localinfo team8 none
-localinfo team9 mesh
-localinfo team10 jag
-localinfo team11 fore
-localinfo team12 edge
-localinfo team13 blue
-map frobodm2
+
+localinfo d_skill		5	// bot skill 0-20
+localinfo k_timetop		30	// maximum time in minutes allocateable by a player for a game
+localinfo k_overtime		1	// overtime mode (0 = off, 1 = time, 2 = SD)
+localinfo k_exttime		5	// overtime length if overtime == 1
+localinfo allow_startsound	0	// start sound mode (0 = off, 1 = on)
+localinfo k_count		10	// number of seconds for the countdown to last
+localinfo k_spectalk		0	// spectators can talk to players during game
+localinfo autoreport		1	// auto team report for human (0 = off, 1 = on)
+localinfo add_q_aerowalk	1	// quad in map Aerowalk
+localinfo k_kfp			1	// "kill" flood protection
+localinfo proxy			0	// qizmo or mqwcl (0 = off, 1 = on)
+localinfo k_motd1		"4on4 server"	// message of the day
+//localinfo k_motd2		"Admin: "
+
+// Game parameters
+samelevel 8396609	// autoteams on
+//samelevel 8394501	// autoteams off
+sv_progsname "qwprogs"
+
+echo "Frogbot 4on4 cfg loaded"
+
+//map frobodm2
+map cmt3
