--- a/waypoint/autoexec.cfg
+++ b/waypoint/autoexec.cfg
@@ -28,6 +28,7 @@ bind "+"	""
 bind ","	"impulse 161"
 bind "-"	""
 bind "."	"impulse 163"
+bind ";"	"impulse 164"
 bind "/"	"impulse 158" // various info
 bind "1"	"impulse 149"
 bind "2"	"impulse 148"
