Add new waypoints for `arena3` aka Terrain by `Drastic_Man`

--- a/configs/arena.cfg
+++ b/configs/arena.cfg
@@ -27,7 +27,8 @@ sv_progsname "qwprogs"
 localinfo amphi endif
 localinfo endif amphi2
 localinfo amphi2 povdmm4
-localinfo povdmm4 amphi
+localinfo povdmm4 arena3
+localinfo arena3 amphi
 
 echo "Frogbot Arena cfg loaded"
 
