Embed custom intermission in waypoint data itself
and make it much easier to set up in waypoint tool.

Also, print marker types together with zone & goal info.

--- a/waypoint/autoexec.cfg
+++ b/waypoint/autoexec.cfg
@@ -29,6 +29,7 @@ bind ","	"impulse 161"
 bind "-"	""
 bind "."	"impulse 163"
 bind ";"	"impulse 164"
+bind "'"	"impulse 165" // set custom intermission
 bind "/"	"impulse 158" // various info
 bind "1"	"impulse 149"
 bind "2"	"impulse 148"
