Waypoint tool: allow overriding bot goals
Huge time saver when testing tricky paths

--- a/waypoint/autoexec.cfg
+++ b/waypoint/autoexec.cfg
@@ -26,7 +26,7 @@ bind "ESCAPE"	"togglemenu"
 bind "SPACE"	"+jump"
 bind "+"	""
 bind ","	"impulse 161"
-bind "-"	""
+bind "-"	"impulse 166" // force goal marker
 bind "."	"impulse 163"
 bind ";"	"impulse 164"
 bind "'"	"impulse 165" // set custom intermission
