Add tweaked waypoints for `arenazap` aka Zaphods Arena
- allow forcing RA spawn mode (teleport destinations as spawns) in maps where it makes sense
- also fall back to regular spawns if no teleport dests exist
- clean up obsolete properties from waypoint inject script
- some other tweaks

--- a/configs/arena.cfg
+++ b/configs/arena.cfg
@@ -19,7 +19,8 @@ localinfo proxy			0	// qizmo or mqwcl (0 = off, 1 = on)
 localinfo k_motd1		"Arena server"	// message of the day
 //localinfo k_motd2		"Admin: "
 
-// Game parameters
+// Game parameters:
+// GAME_MATCH + GAME_LAVA_CHEAT + GAME_ENABLE_DROPWEAP + GAME_ENABLE_BOTCHAT + GAME_BOTJUMP
 samelevel 8393536
 sv_progsname "qwprogs"
 
