--- a/waypoint/autoexec.cfg
+++ b/waypoint/autoexec.cfg
@@ -69,7 +69,7 @@ bind "y"	"impulse 146"
 bind "x"	"impulse 155"
 bind "z"	"impulse 154"
 bind "~"	"toggleconsole"
-bind "UPARROW"  	""
+bind "UPARROW"  	"impulse 10"
 bind "DOWNARROW"	""
 bind "LEFTARROW"	""
 bind "RIGHTARROW"	""
