Overhaul release workflow; further NetQuake improvements
- Fully start supporting NetQuake, it is usable enough and is great
- Stop committing binaries, use GitHub releases for this
- So, only now I found out nQuake doesn't care about FBCA anymore, which of course makes sense. Let's make this repo standalone then, and put more focus on NetQuake support.
- Extras:
  - Provide equivalent of nQuake `weapon` command through impulses 248, 249
  - Fix confusing `int` function names
  - Add some more de-quaked comment strings for easier grepping

--- a/configs-qw/arena.cfg
+++ b/configs-qw/arena.cfg
@@ -20,8 +20,8 @@ localinfo k_motd1		"Arena server"	// message of the day
 //localinfo k_motd2		"Admin: "
 
 // Game parameters:
-// GAME_MATCH + GAME_LAVA_CHEAT + GAME_ENABLE_DROPWEAP + GAME_ENABLE_BOTCHAT + GAME_BOTJUMP
-samelevel 8393536
+// GAME_MATCH + GAME_LAVA_CHEAT + GAME_ENABLE_BOTCHAT + GAME_BOTJUMP
+samelevel 8393280
 sv_progsname "qwprogs"
 
 // map rotation order
