--- a/configs-qw/clarena.cfg
+++ b/configs-qw/clarena.cfg
@@ -16,8 +16,9 @@ localinfo proxy			0	// qizmo or mqwcl (0 = off, 1 = on)
 localinfo k_motd1		"Clan Arena server"	// message of the day
 //localinfo k_motd2		"Admin: "
 
-// Game parameters
-samelevel 9442048
+// Game parameters:
+// LAVA_CHEAT + ENABLE_BOTCHAT + BOTJUMP
+samelevel 9441536
 sv_progsname "qwprogs"
 
 echo "Frogbot Clan Arena cfg loaded"
