--- a/configs-qw/duel.cfg
+++ b/configs-qw/duel.cfg
@@ -19,7 +19,8 @@ localinfo proxy			0	// qizmo or mqwcl (0 = off, 1 = on)
 localinfo k_motd1		"Duel server"	// message of the day
 //localinfo k_motd2		"Admin: "
 
-// Game parameters
+// Game parameters:
+// MATCH + LAVA_CHEAT + ENABLE_DROPWEAP + ENABLE_BOTCHAT + BOTJUMP
 samelevel 8393536
 sv_progsname "qwprogs"
 
