--- a/configs-qw/ffa.cfg
+++ b/configs-qw/ffa.cfg
@@ -17,7 +17,8 @@ localinfo proxy			0	// qizmo or mqwcl (0 = off, 1 = on)
 localinfo k_motd1		"Free For All server"	// message of the day
 //localinfo k_motd2		"Admin: "
 
-// Game parameters
+// Game parameters:
+// ENABLE_POWERUPS + LAVA_CHEAT + ENABLE_DROPWEAP + ENABLE_BOTCHAT + BOTJUMP
 samelevel 8393473 // ffa
 sv_progsname "qwprogs"
 
@@ -42,6 +43,8 @@ localinfo ultrav bsdm6
 localinfo bsdm6 schloss
 localinfo schloss del1
 localinfo del1 ztndm3
+
+echo "Frogbot FFA cfg loaded"
 
 //map dm4
 map ztndm3
