--- a/configs-qw/team.cfg
+++ b/configs-qw/team.cfg
@@ -20,9 +20,11 @@ localinfo proxy			0	// qizmo or mqwcl (0 = off, 1 = on)
 localinfo k_motd1		"4on4 server"	// message of the day
 //localinfo k_motd2		"Admin: "
 
-// Game parameters
+// Game parameters:
+// ENABLE_POWERUPS + MATCH + LAVA_CHEAT + ENABLE_DROPWEAP + ENABLE_AUTOREPORT + ENABLE_AUTOSTEAMS + ENABLE_BOTCHAT + BOTJUMP
 samelevel 8396609	// autoteams on
-//samelevel 8394501	// autoteams off
+// ENABLE_POWERUPS + MATCH + LAVA_CHEAT + ENABLE_DROPWEAP + ENABLE_AUTOREPORT + ENABLE_BOTCHAT + BOTJUMP
+//samelevel 8394561	// autoteams off
 sv_progsname "qwprogs"
 
 echo "Frogbot 4on4 cfg loaded"
