--- a/frogbot.cfg
+++ b/frogbot.cfg
@@ -1,5 +1,6 @@
-// Based on nQuake Frogbot config
-// May need tweaking for your particular Quake flavor and preferences
+// Frogbot main config file for QuakeWorld engines, tested with ezQuake.
+// Based on nQuake Frogbot config from late 2024.
+// May need tweaking for your particular Quake flavor and preferences.
 
 setinfo drate 999999
 
@@ -13,9 +14,10 @@ maxclients 8
 maxspectators 8
 hostname "Frogbot Clan Arena"
 
+// Bots have only been tested at framerate 77. Change at your own risk.
 serverinfo maxfps 77
 
-// Team names (not sure if these work in every engine)
+// Team names (not sure if these work in every engine... or at all; low priority)
 localinfo team0 zero
 localinfo team1 one
 localinfo team2 rock
@@ -31,12 +33,12 @@ localinfo team11 fore
 localinfo team12 edge
 localinfo team13 blue
 
-alias	"bot_1on1"	"exec configs/duel.cfg"
-alias	"bot_2on2"	"exec configs/2on2.cfg;team blue;color 13"
-alias	"bot_4on4"	"exec configs/team.cfg;team blue;color 13"
-alias	"bot_arena"	"exec configs/arena.cfg"
-alias	"bot_carena"	"exec configs/clarena.cfg"
-alias	"bot_ffa"	"exec configs/ffa.cfg"
+alias	"bot_1on1"	"exec configs-qw/duel.cfg"
+alias	"bot_2on2"	"exec configs-qw/2on2.cfg;team blue;color 13"
+alias	"bot_4on4"	"exec configs-qw/team.cfg;team blue;color 13"
+alias	"bot_arena"	"exec configs-qw/arena.cfg"
+alias	"bot_carena"	"exec configs-qw/clarena.cfg"
+alias	"bot_ffa"	"exec configs-qw/ffa.cfg"
 
 // ffa config
 
@@ -69,4 +71,3 @@ localinfo schloss del1
 localinfo del1 ztndm3
 
 samelevel 8393473 // ffa
-
