--- a/waypoint/autoexec.cfg
+++ b/waypoint/autoexec.cfg
@@ -1,8 +1,11 @@
 // Waypoint v2 config by DrLex
 // Based on Mick's waypoint bundle with updated impulses for v2 waypoint build
+// Last major update 2026/02/21
 
 // Ensure powerups are visible in the tool
 set samelevel "1"
+// If you want qwphysics in the tool by default
+//set samelevel "32769"
 
 // Actual settings that may be changed begin here
 +mlook
@@ -20,54 +23,54 @@ cl_bobup "0"
 cl_rollangle "0"
 cl_drawfps
 
-bind "TAB"	"impulse 135"
-bind "ENTER"	"impulse 150"
+bind "TAB"	"impulse 166" // static active marker toggle
+bind "ENTER"	"impulse 178" // set goal/zone
 bind "ESCAPE"	"togglemenu"
 bind "SPACE"	"+jump"
 bind "+"	""
-bind ","	"impulse 161"
-bind "-"	"impulse 166" // force goal marker
-bind "."	"impulse 163"
-bind ";"	"impulse 164"
-bind "'"	"impulse 165" // set custom intermission
-bind "/"	"impulse 158" // various info
-bind "1"	"impulse 149"
-bind "2"	"impulse 148"
-bind "3"	"impulse 132"
-bind "4"	"impulse 139"
-bind "5"	"impulse 144"
-bind "6"	"impulse 138"
-bind "7"	"impulse 152"
-bind "8"	"impulse 151"
-bind "9"	"impulse 142"
-bind "0"	"impulse 156"
+bind ","	"impulse 187" // show same/next goal
+bind "-"	"impulse 191" // force goal marker
+bind "."	"impulse 189" // set door open threshold
+bind ";"	"impulse 188" // show next same type item
+bind "'"	"impulse 192" // set custom intermission
+bind "/"	"impulse 190" // various info
+bind "1"	"impulse 177" // goal/zone--
+bind "2"	"impulse 176" // goal/zone++
+bind "3"	"impulse 162" // spawn marker
+bind "4"	"impulse 170" // toggle connect markers
+bind "5"	"impulse 164" // closest marker mode
+bind "6"	"impulse 169" // 1-way mode
+bind "7"	"impulse 181" // cycle path or marker types
+bind "8"	"impulse 179" // print zone/goal/type
+bind "9"	"impulse 163" // default marker mode
+bind "0"	"impulse 165" // cycle closest markers
 bind "`"	"toggleconsole"
 bind "a"	"+moveleft"
-bind "b"	"impulse 153"
-bind "c"	"impulse 151"
+bind "b"	"impulse 183" // display traveltime
+bind "c"	"impulse 179" // print zone/goal/type
 bind "d"	"+moveright"
-bind "e"	"impulse 159"
-bind "f"	"impulse 144"
-bind "g"	"impulse 142"
-bind "h"	"impulse 137"
-bind "i"	"impulse 135"
-bind "j"	"impulse 138"
-bind "k"	"impulse 160"
-bind "l"	"impulse 156"
-bind "n"	"impulse 133"
-bind "m"	"impulse 134"
-bind "o"	"impulse 131"
-bind "p"	"impulse 136"
-bind "q"	"impulse 150"
-bind "r"	"impulse 157"
+bind "e"	"impulse 175" // move to active marker
+bind "f"	"impulse 164" // closest marker mode
+bind "g"	"impulse 163" // default marker mode
+bind "h"	"impulse 168" // disable active marker
+bind "i"	"impulse 166" // static active marker toggle
+bind "j"	"impulse 169" // 1-way mode
+bind "k"	"impulse 171" // auto-connect teleport
+bind "l"	"impulse 165" // cycle closest markers
+bind "n"	"impulse 185" // check all goals
+bind "m"	"impulse 186" // check all zones
+bind "o"	"impulse 160" // toggle manual mode
+bind "p"	"impulse 167" // remove active marker
+bind "q"	"impulse 178" // set goal/zone
+bind "r"	"impulse 180" // print/show paths
 bind "s"	"+back"
-bind "t"	"impulse 145"
-bind "u"	"impulse 147"
-bind "v"	"impulse 152"
+bind "t"	"impulse 172" // clear marker paths
+bind "u"	"impulse 174" // vertically move marker
+bind "v"	"impulse 181" // cycle path or marker types
 bind "w"	"+forward"
-bind "y"	"impulse 146"
-bind "x"	"impulse 155"
-bind "z"	"impulse 154"
+bind "y"	"impulse 173" // move marker
+bind "x"	"impulse 184" // display reachable
+bind "z"	"impulse 182" // cycle display mode
 bind "~"	"toggleconsole"
 bind "UPARROW"  	"impulse 10"
 bind "DOWNARROW"	""
@@ -76,8 +79,8 @@ bind "RIGHTARROW"	""
 bind "ALT"	"+moveup"
 bind "LCTRL"	"+movedown"
 bind "CTRL"	"+movedown"
-bind "F1"	"impulse 143"
-bind "F2"	"impulse 130" // noclip toggle
+bind "F1"	"impulse 161" // dump waypoint data to console
+bind "F2"	"impulse 131" // noclip toggle
 bind "F3"	"impulse 50" // damage flash toggle
 bind "F4"	"impulse 123" // become frogbot
 bind "F5"	"condump" // classic quicksave key
@@ -88,11 +91,11 @@ bind "INS"	""
 bind "DEL"	""
 bind "PGDN"	""
 bind "END"	""
-bind "MOUSE1"	"impulse 132"
-bind "MOUSE2"	"impulse 139"
+bind "MOUSE1"	"impulse 162" // spawn marker
+bind "MOUSE2"	"impulse 170" // toggle connect markers
 bind "MOUSE3"	"+attack"
-bind "MWHEELUP"  	"impulse 148"
-bind "MWHEELDOWN"	"impulse 149"
+bind "MWHEELUP"  	"impulse 176" // goal/zone++
+bind "MWHEELDOWN"	"impulse 177" // goal/zone--
 bind "PAUSE"	""
 bind "HOME"	""
 
