Config fix: do not crash vkQuake MP setup menu
Hostname must not exceed 15 characters

--- a/configs-quake/2on2.cfg
+++ b/configs-quake/2on2.cfg
@@ -3,7 +3,7 @@ timelimit 10
 teamplay 2
 deathmatch 3
 maxplayers 4
-hostname "Frogbot Clan Arena"
+hostname "Frogbot 2on2"
 
 // Requires engine with custom cvar support (i.e., most modern engines)
 set add_q_aerowalk	1	// quad in map Aerowalk
