--- a/configs-quake/clarena.cfg
+++ b/configs-quake/clarena.cfg
@@ -3,7 +3,7 @@ timelimit 20
 teamplay 3
 deathmatch 4
 maxplayers 8
-hostname "Frogbot Clan Arena"
+hostname "Frogbot CLArena"
 
 // Requires engine with custom cvar support (i.e., most modern engines)
 set add_q_aerowalk	1	// quad in map Aerowalk
