--- a/configs-quake/duel.cfg
+++ b/configs-quake/duel.cfg
@@ -3,7 +3,7 @@ timelimit 6
 teamplay 0
 deathmatch 3
 maxplayers 2
-hostname "Frogbot Clan Arena"
+hostname "Frogbot Duel"
 
 // Requires engine with custom cvar support (i.e., most modern engines)
 set add_q_aerowalk	1	// quad in map Aerowalk
