--- a/configs-quake/ffa.cfg
+++ b/configs-quake/ffa.cfg
@@ -3,7 +3,7 @@ timelimit 6
 teamplay 0
 deathmatch 3
 maxplayers 8
-hostname "Frogbot Clan Arena"
+hostname "Frogbot FFA"
 
 
 // Requires engine with custom cvar support (i.e., most modern engines)
