--- a/configs-quake/team.cfg
+++ b/configs-quake/team.cfg
@@ -3,7 +3,7 @@ timelimit 20
 teamplay 2
 deathmatch 1
 maxplayers 8
-hostname "Frogbot Clan Arena"
+hostname "Frogbot 4on4"
 
 // Requires engine with custom cvar support (i.e., most modern engines)
 set add_q_aerowalk	1	// quad in map Aerowalk
