--- a/frogbot-quake.cfg
+++ b/frogbot-quake.cfg
@@ -15,7 +15,8 @@ alias   "bot_arena"     "exec configs-quake/arena.cfg"
 alias   "bot_carena"    "exec configs-quake/clarena.cfg"
 alias   "bot_ffa"       "exec configs-quake/ffa.cfg"
 
-hostname "Frogbot Clan Arena"
+// Max 15 characters for compatibility with all engines
+hostname "Frogbot FFA"
 
 // Bots have only been tested at framerate 77. Change at your own risk.
 host_maxfps "77"
