--- a/configs-quake/arena.cfg
+++ b/configs-quake/arena.cfg
@@ -4,7 +4,7 @@ teamplay 0
 deathmatch 4
 maxclients 8
 maxspectators 8
-hostname "Frogbot Clan Arena"
+hostname "Frogbot Arena"
 
 // Requires engine with custom cvar support (i.e., most modern engines)
 set add_q_aerowalk	1	// quad in map Aerowalk
